# bspx

./: .gitignore  README.md  pixi.toml  pyproject.toml
.claude/: settings.json
bspx/: curves.py  utils.py
examples/: 01_plotting.py  02_benchmark.py  03_derivatives.py  04_arclength.py  05_greville.py
src/bspx/: __init__.py  _typing.py  bsplines.py  curves.py  deboor.py  utils.py  utils_static.py
tests/: test_against_scipy.py  test_fit_cpu_vs_gpu.py
